# Anki-Builder

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: config.py
examples/: morning_routine.apkg  morning_routine.csv
src/: Audio_File.py  build_1.py  build_deck.py  get_audio.py  get_data.py  utils.py
src/services/: tts_factory.py
tests/: test_get_audio.py  test_get_data.py
tests/fixtures/: test.csv
