[project]
name = "anki-builder"
version = "0.1.0"
description = "CLI utility that turns CSV vocabulary lists into fully voiced Anki decks."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Kriss Kolak" }]
keywords = ["anki", "tts", "flashcards", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "genanki>=0.13.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.3",
    "transformers>=4.38",
]

[project.urls]
homepage = "https://github.com/Kriss-Kolak/anki-builder"
repository = "https://github.com/Kriss-Kolak/anki-builder"

[project.scripts]
anki-builder = "main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
